[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Fonts/jupiterc.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Scripts/Lost.gd" type="Script" id=2]
[ext_resource path="res://Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Music/Lose.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 105, 31.857 )

[sub_resource type="Animation" id=2]
resource_name = "Lose"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Lose:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -88 ), Vector2( 0, 56 ), Vector2( 0, 46 ), Vector2( 0, 56 ), Vector2( 0, 56 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Score:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Score:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 140 ), Vector2( 0, 140 ), Vector2( 0, 146 ), Vector2( 0, 146 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lose:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 3.5 ), Vector2( 4, 4 ), Vector2( 4, 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Play:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 178 ), Vector2( 4, 178 ), Vector2( 4, 190 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Play:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ColorRect:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0705882, 0.0705882, 0.0705882, 0 ), Color( 0.0705882, 0.0705882, 0.0705882, 0.588235 ), Color( 0.0705882, 0.0705882, 0.0705882, 0.784314 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GameMode:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Press"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Press:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_char = 1
extra_spacing_space = -4
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.109804, 0.109804, 0.109804, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[node name="Lost" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 75.6955, 197.11 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 360.0
margin_bottom = 360.0
color = Color( 0.0705882, 0.0705882, 0.0705882, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Lose = SubResource( 2 )
anims/Press = SubResource( 3 )

[node name="Lose" type="Control" parent="."]
margin_top = -88.0
margin_right = 90.0
margin_bottom = -66.0002
rect_scale = Vector2( 4, 3.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="Lose"]
margin_left = -1.0
margin_top = 1.0
margin_right = 89.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You Lose"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Lose"]
margin_right = 90.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.345098, 0.0941176, 1 )
text = "You Lose"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Score" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 140.0
margin_right = 180.0
margin_bottom = 162.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="Score"]
margin_left = -1.0
margin_top = 1.0
margin_right = 180.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score : 52"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Score"]
margin_right = 180.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0941176, 1, 0.678431, 1 )
text = "Score : 52"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Play" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 4.0
margin_top = 178.0
margin_right = 124.0
margin_bottom = 200.0
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="Play"]
margin_left = -1.0
margin_top = 1.0
margin_right = 120.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play again"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Play"]
margin_right = 120.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.0941176, 0.203922, 1 )
text = "Play again"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GameMode" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 127.392
margin_top = -12.0008
margin_right = 247.392
margin_bottom = 9.99924
rect_rotation = 10.3189
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="GameMode"]
margin_left = -1.0
margin_top = 1.0
margin_right = 120.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Easy"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="GameMode"]
margin_right = 120.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.0941176, 0.203922, 1 )
text = "Easy"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Press" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 259.643
margin_right = 360.0
margin_bottom = 281.643
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="Press"]
margin_left = -1.0
margin_top = 1.0
margin_right = 360.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press on play again to restart !"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Press"]
margin_left = 1.25992
margin_right = 361.26
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.615686, 1, 0.0941176, 1 )
text = "Press on play again to restart !"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="PopupPanel" parent="."]
self_modulate = Color( 1, 1, 1, 0.972549 )
margin_left = 110.061
margin_top = 129.046
margin_right = 241.061
margin_bottom = 237.046
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_right = 131.0
margin_bottom = 108.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 125.0
margin_bottom = 102.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox"]
self_modulate = Color( 1, 0.215686, 0.215686, 1 )
margin_right = 119.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
text = "Choose Difficulty"
align = 1

[node name="Control" type="ColorRect" parent="Panel/MarginContainer/VBox"]
self_modulate = Color( 1, 1, 1, 0.478431 )
margin_top = 29.0
margin_right = 119.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0, 0, 0, 1 )

[node name="Easy" type="Button" parent="Panel/MarginContainer/VBox"]
self_modulate = Color( 1, 0.980392, 0.392157, 1 )
margin_top = 39.0
margin_right = 119.0
margin_bottom = 60.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 3 )
text = "Easy Mode"

[node name="Hard" type="Button" parent="Panel/MarginContainer/VBox"]
modulate = Color( 1, 0.105882, 0.105882, 1 )
margin_top = 68.0
margin_right = 119.0
margin_bottom = 89.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = ExtResource( 3 )
text = "Challenge Mode"

[node name="Lost" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/Easy" to="." method="_on_Difficulty_pressed" binds= [ "Easy" ]]
[connection signal="pressed" from="Panel/MarginContainer/VBox/Hard" to="." method="_on_Difficulty_pressed" binds= [ "Hard" ]]
